--- a/build.xml
+++ b/build.xml
@@ -1,2 +1,8 @@
-int x;
-x=5;
+<project>
+
+    <target name="compile">
+        <mkdir dir="build/classes"/>
+        <javac srcdir="src" destdir="build/classes"/>
+    </target>
+
+</project>
